syntax = "proto3";

package rivet.backend.party;

import "proto/common.proto";
import "proto/backend/net.proto";

message Party {
	message Publicity {
		PublicityLevel public = 1;
		PublicityLevel friends = 2;
		PublicityLevel teams = 3;
	}

	enum PublicityLevel {
		NONE = 0;
		VIEW = 1;
		JOIN = 3;
	}

	rivet.common.Uuid party_id = 1;
	int64 create_ts = 2;
	optional rivet.common.Uuid leader_user_id = 3;
	uint32 party_size = 4;
	int64 state_change_ts = 5;
	Publicity publicity = 6;

	message StateMatchmakerFindingLobby {
		rivet.common.Uuid namespace_id = 1;
		rivet.common.Uuid query_id = 2;
	}

	message StateMatchmakerLobby {
		rivet.common.Uuid namespace_id = 1;
		rivet.common.Uuid lobby_id = 2;
	}

	// Nullable for idle
	oneof state {
		StateMatchmakerFindingLobby matchmaker_finding_lobby = 101;
		StateMatchmakerLobby matchmaker_lobby = 102;
	}
}

message PartyMember {
	rivet.common.Uuid party_id = 1;
	rivet.common.Uuid user_id = 2;
	int64 create_ts = 3;
	int64 state_change_ts = 4;
	optional rivet.backend.net.ClientInfo client_info = 5;

	message StateMatchmakerReady {

	}

	message StateMatchmakerFindingLobby {
		rivet.common.Uuid player_id = 1;
		string player_token = 2;
	}

	message StateMatchmakerFindingLobbyDirect {
		rivet.common.Uuid direct_query_id = 1;
		rivet.common.Uuid player_id = 2;
		optional string player_token = 3;
	}

	message StateMatchmakerLobby {
		rivet.common.Uuid player_id = 1;
		string player_token = 2;
	}

	// Nullable for inactive
	oneof state {
		StateMatchmakerReady matchmaker_ready = 101;
		StateMatchmakerFindingLobby matchmaker_finding_lobby = 102;
		StateMatchmakerFindingLobbyDirect matchmaker_finding_lobby_direct = 103;
		StateMatchmakerLobby matchmaker_lobby = 104;
	}
}

message Invite {
	rivet.common.Uuid invite_id = 1;
	rivet.common.Uuid party_id = 2;
	int64 create_ts = 3;
	optional InviteAlias alias = 4;
	string token = 5;
}

message InviteAlias {
	rivet.common.Uuid namespace_id = 1;
	string alias = 2;
}

// TODO:
// message Activity {
// 	message GameActivity {
// 		rivet.common.Uuid game_id = 1;
// 	}

// 	oneof activity {
// 		GameActivity game = 1;
// 	}
// }
