syntax = "proto3";

package rivet.backend.pkg.party.msg.invite_create_fail;

import "proto/common.proto";

enum ErrorCode {
	UNKNOWN = 0;
	PARTY_DOES_NOT_EXIST = 1;
	ALIAS_NOT_UNIQUE = 2;
}

/// name = "msg-party-invite-create-fail"
/// parameters = [
/// 	{ name = "party_id" },
/// 	{ name = "invite_id" },
/// ]
message Message {
	rivet.common.Uuid party_id = 1;
	rivet.common.Uuid invite_id = 2;
	ErrorCode error_code = 3;
}

